--- a/src/pages/setting/setting.html
+++ b/src/pages/setting/setting.html
@@ -31,16 +31,16 @@
           </div>
         </div>
       </ion-item>
-      <ion-item class="text-center item item-icon-right bigTitle">
+      <ion-item class="text-left item item-icon-right bigTitle">
         我的资源（即将上线，敬请期待）<i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="text-center  item item-icon-right bigTitle" ng-click="goChangePassword()">
+      <ion-item class="text-left  item item-icon-right bigTitle" ng-click="goChangePassword()">
         修改密码<i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="text-center item item-icon-right bigTitle" ng-click="versionDetection()">
-        版本检测(1.2.3)
+      <ion-item class="text-left item item-icon-right bigTitle" ng-click="versionDetection()">
+        版本检测 (1.2.3)
       </ion-item>
-      <ion-item class="text-center item item-icon-right bigTitle" ng-click="exitAccount()">
+      <ion-item class="text-left item item-icon-right bigTitle" ng-click="exitAccount()">
         退出登录
       </ion-item>
     </ion-list>
