--- a/src/pages/setting/userApplication/exchange/exchange.html
+++ b/src/pages/setting/userApplication/exchange/exchange.html
@@ -1,4 +1,4 @@
-<ion-view view-title="调换" class="myInfo indexPage">
+<ion-view view-title="调换" class="myInfo indexPage exchange">
   <ion-header-bar class="head-bg">
     <button class="button button-icon icon ion-ios-arrow-left" ng-click="goBack()"></button>
     <div class="title titleStyle">
@@ -7,10 +7,59 @@
     <button class="button button-clear button-positive" style="font-size: 14px;color: black;">保存</button>
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
-    <ion-list>
-      <ion-item class="text-center item item-icon-right" ng-click="goMessageDetail()">
-        调换
-      </ion-item>
-    </ion-list>
+    <div class="list">
+      <div class="item item-divider">
+        实际归属地
+      </div>
+      <label class="item item-input item-select">
+        <div class="input-label">
+          <!--Lightsaber-->&nbsp;
+        </div>
+        <select ng-model="data.province" ng-change="selectProvince(data.province)">
+          <option ng-repeat="item in data.listProvince" value="{{item}}">{{item.name}}</option>
+        </select>
+      </label>
+      <label class="item item-input item-select">
+        <div class="input-label">
+          <!--Lightsaber-->&nbsp;
+        </div>
+        <select ng-model="data.city">
+          <option ng-repeat="item in data.listCity">{{item}}</option>
+        </select>
+      </label>
+      <div class="item item-divider">
+        调换给
+      </div>
+      <div class="item item-input-inset">
+        <label class="item-input-wrapper">
+          <input type="text" placeholder="请正确输入培训师姓名">
+        </label>
+        <button class="button button-small">
+          查询
+        </button>
+      </div>
+      <div class="item text-center">
+        暂无数据
+      </div>
+
+      <ion-radio ng-repeat="item in clientSideList"
+                 ng-value="item.value"
+                 ng-model="data.clientSide">
+        <div class="row row-no-padding">
+          <div class="col">{{ item.text }}</div>
+          <div class="col">18298182058</div>
+        </div>
+      </ion-radio>
+      <div class="item item-divider">
+        调换缘由
+      </div>
+      <div class="item">
+        <textarea rows="3" cols="20" style="background-color:#eee;padding:5px;width: 100%" placeholder="最多输入300个汉字">二维翁翁</textarea>
+      </div>
+      <div class="styleTips">
+        温馨提示：只能调换给管辖实际归属地区域的人
+      </div>
+    </div>
+
   </ion-content>
 </ion-view>
