--- a/src/pages/setting/messageInfo/messageList.html
+++ b/src/pages/setting/messageInfo/messageList.html
@@ -8,7 +8,12 @@
       全部已读
     </button>
   </ion-header-bar>
-  <ion-content class="content-style" delegate-handle="mainScroll">
+  <ion-content class="content-style" delegate-handle="mainScrollMessageList">
+    <!-- 1.添加下拉刷新的组件 -->
+    <ion-refresher
+      pulling-text="下拉刷新页面数据..."
+      on-refresh="doRefresh()">
+    </ion-refresher>
     <ion-list>
       <ion-item class="text-center item item-icon-right" ng-class="{'urgentBackground': false}"
                 ng-click="goMessageDetail()" ng-repeat="i in [1,2,3,4,5,6,7,8,9,10,11,12]">
