--- a/src/pages/setting/userApplication/exchange/exchange.html
+++ b/src/pages/setting/userApplication/exchange/exchange.html
@@ -8,7 +8,7 @@
   </ion-header-bar>
   <ion-content class="content-style" delegate-handle="mainScroll">
     <div class="list">
-      <div class="item item-divider">
+      <div class="item item-divider" style="border-top: 0px">
         实际归属地
       </div>
       <label class="item item-input item-select">
