--- a/src/pages/setting/userApplication/return/return.html
+++ b/src/pages/setting/userApplication/return/return.html
@@ -9,7 +9,7 @@
   <ion-content class="content-style" delegate-handle="mainScroll">
     <div class="list">
 
-      <div class="item item-divider">
+      <div class="item item-divider" style="border-top: 0px">
         返回给
       </div>
       <ion-radio ng-repeat="item in clientSideList"
